## Makefile.am
##
## Makefile for 'src/common/'
##
## (C) Copyright 2017-2022 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = combobox.cpp combobox.h\
             config.cpp config.h\
             dparser.cpp dparser.h\
             endpointmap.cpp endpointmap.h\
             logindialog.cpp logindialog.h\
             multistatewidget.cpp multistatewidget.h\
             paths.h.in\
             saparser.cpp saparser.h\
             sendmail.cpp sendmail.h

CLEANFILES = *~\
             moc_*\
             *.obj\
             *.idb\
             *.pdb\
             *ilk
DISTCLEANFILES = paths.h
MAINTAINERCLEANFILES = *~\
                       Makefile.in
